# kstats

./: CMakeLists.txt  LICENSE  README.md  metadata.json
.github/workflows/: ci.yml  release.yml
contents/config/: config.qml  main.xml
contents/ui/: BarStat.qml  CompactRepresentation.qml  CpuBreakdown.qml  CpuCoreBars.qml  CpuPage.qml  DetailRow.qml  DiskPage.qml  DropdownMetric.qml  FullRepresentation.qml  GpuPage.qml  MetricTile.qml  NetworkHistoryChart.qml  NetworkPage.qml  RamPage.qml  RingGauge.qml  RunCommand.qml  Sparkline.qml  TabPill.qml  TopApplicationList.qml  TopMemoryProcessList.qml  TopNetworkProcessList.qml  TopProcessList.qml  configGeneral.qml  main.qml
package/: metadata.json
package/contents/ui/: main.qml
